// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesIcon renders default icon correctly 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/toolbar/Messages.png",
      }
    }
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;

exports[`MessagesIcon renders white icon correctly 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/icons/toolbar/MessagesWhite.png",
      }
    }
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;
